long words no longer overflow the text box

--- a/room.css
+++ b/room.css
@@ -21,9 +21,10 @@ header{
   text-align: left;
 }
 #messages > .message{
+  word-wrap: break-word;
 }
 #messages > .message > .content{
-  display: inline-block;
+  display: inline;
 }
 #messages > .chara-Narrator {
   background-color: #fff;
